<resources>
    <string name="app_name" translatable="false">MovilApp</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!--Strings related to bookings-->
    <string name="title_activity_reservas">Bookings</string>
    <string name="reservar_vcub">Book a Vcub</string>
    <string name="reservar_movibus">Book a Movibus</string>

    <!--Strings related to vcub booking-->
    <string name="title_activity_reserva_vcub">Booking Vcubs</string>
    <string name="titulo_seleccionar_estacion">Select a station</string>
    <string name="confirmar_reserva_text">Confirm Booking</string>


    <!--Strings related to movibus booking-->
    <string name="title_activity_reserva_movibus">Booking Movibus</string>
    <string name="titulo_pedido_movibus">Book a Movibus</string>
    <string name="book_movibus">Book Movibus</string>
    <string name="initial_pos_hint">Pick up address</string>
    <string name="final_pos_hint">Destination address</string>
    <string name="date_pos_hint">When do you want to go</string>
    <string name="get_pos_button">Actual address</string>
</resources>
