<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_reserva_movibus"
    tools:context="co.edu.uniandes.isis2503.tbc.movilapp.ReservaMovibusActivity">
    <TextView
        android:layout_height="30dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorText"
        android:textSize="25sp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/titulo_pedido_movibus"
        android:textAlignment="center"/>

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"/>
    <ScrollView android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/posicion_inicial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/initial_pos_hint"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/posicion_destino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/final_pos_hint"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView android:id="@+id/fecha_ejecucion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_pos_hint"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/reservar_movibus_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/book_movibus"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout >
